--- a/style.css
+++ b/style.css
@@ -359,3 +359,12 @@ body {
         box-shadow: none;
     }
 }
+.photo-placeholder {
+            font-size: 60px;
+            opacity: 0.5;
+        }
+        
+        .photo {
+            width: 100%;
+            height: 100%;
+            ob
